updating to Java 21. also removed unused method staticSpecialAssign from ScriptedClass