@@ -280,7 +280,7 @@ public class AbstractParser {
             if (peek().type() == increase) i++;
             else if (peek().type() == decrease) i--;
         } while (i > 0 && !isAtEnd());
-        tokens.remove(tokens.size() - 1); //remove last
+        tokens.removeLast();
         return tokens.toArray(Token[]::new);
     }
 
